# luci-tex

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yml  pre-commit.yml  tests.yml
docs/: cli.md  cli_app.py  conf.py  index.md
docs/source/: luci.md  modules.md
src/luci/: acromerge.py  archive.py  bibparse.py  bibtools.py  check.py  cli.py
tests/: __init__.py  conftest.py  test_acronym_validate.py  test_archive.py  test_check.py  test_check_e2e.py  test_citeauthor_replace.py  test_fix_dups.py  test_merge_acronyms.py  test_merge_bibs.py  utils.py
