[project]
name = "luci"
version = "0.1.0"
description = "Helper CLI for LaTeX Projects"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Alexius Wadell", email = "awadell@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "bibtexparser>=1.4.3",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "unidecode>=1.4.0",
]

[project.scripts]
luci = "luci.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
