[project]
name = "luci"
version = "0.1.0"
description = "Helper CLI for LaTeX Projects"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Alexius Wadell", email = "awadell@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "bibtexparser>=1.4.3",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "unidecode>=1.4.0",
]

[project.scripts]
luci = "luci.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pre-commit>=3.7",
    "ruff>=0.12.1",
]
docs = [
    "sphinx>=7.2.6",
    "furo>=2024.1.29",
    "sphinx-autobuild>=2021.3.14",
    "myst-parser>=2.0.0",
    "sphinx-click>=5.1.0",
]

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", # Default
    "F401",
    "I001", "UP", # Use 3.9+ style
    "W191", "W291", "W292", "W605", # Whitespace lints
]
